first commit on devbranch

--- a/navbar/index.html
+++ b/navbar/index.html
@@ -17,7 +17,7 @@
           <div class="nav_left">
             <a class="navbar-brand" href="#"><img src="" alt=""></a>
           </div>
-          <div class="nav_center">
+          <div class="nav_center" style="background-color: #FFF;">
             <form class="d-flex search_form">
               <button class="btn btn_search " type="button"><i class="fa-solid fa-magnifying-glass"></i></button>
               <input class="form-control me-2 search_input" type="text" placeholder="Search here...">
