--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/62e90223ff.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
+      
      <nav class="navbar navbar-expand-sm navbar-dark ">
         <div class="container">
           <div class="nav_left">
@@ -20,17 +22,17 @@
           <div class="nav_center">
             <form class="d-flex search_form">
               <button class="btn btn_search " type="button"><i class="fa-solid fa-magnifying-glass"></i></button>
-              <input class="form-control me-2 search_input" type="text" placeholder="Search here...">
+              <input class=" me-2 search_input" type="text" placeholder="Search here...">
             </form>  
           </div>
           <div class="nav_right">
             <div class="collapse navbar-collapse" id="mynavbar">
               <ul class="navbar-nav me-auto">
                 <li class="nav-item icon_nav_cart">
-                  <a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                  <a class="nav-link" href="#" data-toggle="tooltip" data-placement="bottom" title="Giỏ hàng  "><i class="bi bi-cart"></i></a>
                 </li>
                 <li class="nav-item icon_nav_user">
-                  <a class="nav-link" href="signup.html"><i class="fa-solid fa-user"></i></a>
+                    <a class="nav-link" href="signup.html" data-toggle="tooltip" data-placement="bottom" title="Đăng nhập"><i class="bi bi-person-circle"></i></a> 
                 </li>
               </ul>
             </div>
@@ -41,5 +43,6 @@
         </div>
       </nav>
     </header>
+   
 </body>
 </html>
