--- a/signup.html
+++ b/signup.html
@@ -7,35 +7,82 @@
     <title>Sign Up</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/62e90223ff.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="wrapper" class="bg-light">
-        <div class="container-fluid ">
-            <div class="row justify-content-around ">
-                <form action="POST" method="" class="col-md-4 p-3 my-3 ">
-                    <h1 class="h3 text-center py-3 ">SIGN UP</h1>
-                    <div class="form-group my-3">
-                        <label for="fullname">Fullname</label>
-                        <input type="text" name="fullname" id="fullname" class="form-control" placeholder="Enter fullname..." required>
+    <!-- nav -->
+    <header>  
+        <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
+           <div class="container">
+             <div class="nav_left">
+               <a class="navbar-brand" href="index.html"><img src="" alt=""></a>
+             </div>
+             <div class="nav_center">
+               <form class="d-flex search_form">
+                 <button class="btn btn_search " type="button"><i class="fa-solid fa-magnifying-glass"></i></button>
+                 <input class=" me-2 search_input" type="text" placeholder="Search here...">
+               </form>  
+             </div>
+             <div class="nav_right">
+               <div class="collapse navbar-collapse" id="mynavbar">
+                 <ul class="navbar-nav me-auto">
+                   <li class="nav-item icon_nav_cart">
+                     <a class="nav-link" href="#" data-toggle="tooltip" data-placement="bottom" title="Giỏ hàng  "><i class="bi bi-cart"></i></a>
+                   </li>
+                   <li class="nav-item icon_nav_user">
+                       <a class="nav-link" href="signin.html" data-toggle="tooltip" data-placement="bottom" title="Đăng nhập"><i class="bi bi-person-circle"></i></a> 
+                   </li>
+                 </ul>
+               </div>
+               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+                 <span class="navbar-toggler-icon"></span>
+               </button>
+             </div>
+           </div>
+        </nav>
+    </header>
+       <!-- nav -->
+       <!-- Sign up form -->
+        <section>
+            <div class="p-5 bg-image" style="background: linear-gradient(0deg, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), linear-gradient(192.97deg, #2A9D8F 21.48%, #E9C46A 101.36%); height: 300px;"></div>
+            <div class="card mx-4 mx-md-5 shadow-5-strong" style=" margin-top: -100px; background: hsla(0, 0%, 100%, 0.8); backdrop-filter: blur(30px);">
+            <div class="card-body py-5 px-md-5">
+                <div class="row d-flex justify-content-center">
+                <div class="col-lg-8">
+                    <h2 class="fw-bold mb-5 text-center">SIGN UP</h2>
+                    <form method="post">
+                    <div class="row">
+                        <div class="col-md-6 mb-4">
+                        <div class="form-outline">
+                            <label class="form-label" for="firstname">First name</label>
+                            <input type="text" id="firstname" class="form-control"  required />
+                        </div>
+                        </div>
+                        <div class="col-md-6 mb-4">
+                        <div class="form-outline">
+                            <label class="form-label" for="lastname">Last name</label>
+                            <input type="text" id="lastname" class="form-control" required/>
+                        </div>
+                        </div>
                     </div>
-                    <div class="form-group my-3">
-                        <label for="username">Username</label>
-                        <input type="text" name="username" id="username" class="form-control" placeholder="Enter username..." required>
-                    </div>   
-                    <div class="form-group my-3">
-                        <label for="password">Password</label>
-                        <input type="password" name="password" id="password" class="form-control" placeholder="Enter password..." required>    
+                    <div class="form-outline mb-4">
+                        <label class="form-label" for="email">Email address</label>
+                        <input type="email" id="email" class="form-control" required/>
                     </div>
-                    <div class="form-group my-3">
-                        <label for="email">Email</label>
-                        <input type="email" name="email" id="email" class="form-control"  placeholder="email@example.com" required>
+                    <div class="form-outline mb-4">
+                        <label class="form-label" for="password">Password</label>
+                        <input type="password" id="password" class="form-control" required/>
                     </div>
-                    <input type="submit" name="submit" id="submit" value="Submit" class="btn btn-block btn-primary text-white">
-                </form>
+                    <button type="submit" class="btn btn-primary w-100 mb-4">
+                        Sign up
+                    </button>
+                    </form>
+                </div>
+                </div>
             </div>
-        </div>
-    </div>
+            </div>
+        </section>
+        <!-- sign up form -->
 </body>
 </html>
